fix(footer): aligns link colours to designs

--- a/projects/canopy/src/styles/variables/components/_footer.scss
+++ b/projects/canopy/src/styles/variables/components/_footer.scss
@@ -2,5 +2,5 @@
   --footer-logo-height: 4.5rem;
   --footer-logo-height-lg: 7.25rem;
   --footer-bg-color: var(--color-white);
-  --footer-text-color: var(--color-battleship-grey);
+  --footer-text-color: var(--color-charcoal);
 }
